<resources>
    <string name="app_name">FinalProject</string>
    <string name="calories">Calories</string>
    <string name="med">Med</string>
    <string name="exercise">Exercise</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="medication_reminder">Medication reminder</string>
    <string name="hba1c">HBA1C</string>
    <string name="last_7_days">Last 7 days.</string>
    <string name="average">Average</string>
    <string name="lowest">Lowest</string>
    <string name="highest">Highest</string>
    <string name="understanding_hba1c">Understanding Hba1c.</string>
    <string name="borderline">Borderline</string>
    <string name="high">High</string>
    <string name="consumed">Consumed</string>
    <string name="today">Today</string>
    <string name="dinner">dinner</string>
    <string name="Dinner">Dinner</string>
    <string name="snack">Snack</string>
    <string name="what_type_of_diabetes_n_do_you_have">What type of diabetes\n do you have?</string>
    <string name="type_1_diabetes">Type 1 Diabetes</string>
    <string name="type_2_diabetes">Type 2 Diabetes</string>
    <string name="GO" />
    <string name="go">GO</string>
    <string name="moderate_activity">Moderate Activity</string>
    <string name="vigorous_activity">Vigorous Activity</string>
    <string name="vigorous">Vigorous</string>
    <string name="moderate">Moderate</string>
    <string name="medication_count">Medication count</string>
    <string name="insulin">Insulin</string>
    <string name="metformin">Metformin</string>
    <string name="medication_adherence">Medication Adherence</string>
    <string name="metformin_5">Metformin 5</string>
    <string name="refill_reminder">Refill reminder</string>
    <string name="tell_us_about_your_treatement_plan">Tell us about your treatement</string>
    <string name="please_tell_us_more">Please tell us more...</string>
    <string name="if_other_please_tell_us_more">If other please tell us more.</string>
    <string name="back">back</string>
    <string name="go_back">Go back</string>
    <string name="monday">Monday</string>
    <string name="_9_00_am">9:00 am</string>
    <string name="_03_11_2021">03/11/2021</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="john">John</string>
    <string name="weight">Weight</string>
    <string name="type">Type</string>
    <string name="doctors_orders">Doctors orders.</string>
    <string name="hyperglaecemia">Hyperglaecemia</string>
    <string name="hypoglaecemia">Hypoglaecemia</string>
    <string name="target">Target</string>
    <string name="settings">Settings</string>
    <string name="welcome">Welcome</string>
    <string name="blood_glucose">Blood glucose</string>
    <string name="medication">Medication</string>
    <string name="Enter_reading" />
    <string name="unit" />
    <string name="enter">Enter</string>
    <string name="enter_a_reading">Enter a reading</string>
    <string name="enter_breakfast_calories">Enter breakfast calories.</string>
    <string name="enter_dinner_calories" />
    <string name="recent_activity">Recent Activity</string>
    <string name="speed_walking_20_minutes">Speed walking - 20 minutes</string>
    <string name="activity">Activity</string>

    <string name="preference_file_key" translatable="false">preferenceFile</string>
    <string name="name_key" translatable="false">nameKey</string>
    <string name="dob_key" translatable="false">dobKey</string>
    <string name="weight_key" translatable="false">weightKey</string>
    <string name="height_key" translatable="false">heightKey</string>
    <string name="height">Height</string>
    <string name="Go">Continue</string>
    <string name="if_other_please_explain_further">If other, please explain further</string>
    <string name="medication_key">medicationKey</string>
    <string name="medication_two_key">medicationTwoKey</string>
    <string name="title">Title</string>
    <string name="email_key" translatable="false">emailKey</string>
    <string name="type1_key">type1Key</string>
    <string name="type_2_key">type2Key</string>
    <string name="submit">Submit</string>
    <string name="on_target">On target</string>
    <string name="close">Close</string>
    <string name="great_work">Great work.</string>
    <string name="hyper">Hyper</string>
    <string name="hypo">Hypo</string>
    <string name="too_high_key">tooHighKey</string>
    <string name="too_low_key">tooLowKey</string>
    <string name="on_target_key">onTargetKey</string>
    <string name="metforminstock_key">metforminstock_key</string>
    <string name="insulin_key">insulin_key</string>
    <string name="_0">0</string>
    <string name="steps">Steps</string>
    <string-array name="languages">
        <item> Before breakfast </item>
        <item> Post breakfast</item>
        <item>Post lunch </item>
        <item> Before bed</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="medication_i_am_taking">Medication I am taking</string>
    <string name="activity_type">Activity type</string>
    <string name="daily_dosage">daily_dosage</string>
</resources>