<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="ex"
            type="android.view.View.OnClickListener" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E8E8E8	"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="676dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_bg_Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="0dp"
                android:text="Blood Glucose"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/white_corner">

                <LinearLayout
                    android:id="@+id/BgCount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_hb_title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="5"
                        android:gravity="center"
                        android:text="@string/hba1c"
                        android:textColor="@color/black"
                        android:textSize="26sp"
                        android:textStyle="bold" />


                </LinearLayout>

                <EditText
                    android:id="@+id/hbScore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/BgCount"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:hint="0"
                    android:maxLength="3"
                    android:textColor="@color/black"
                    android:textSize="40sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnSubmit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/BgCount"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/round_bg"
                    android:gravity="center"
                    android:text="@string/submit"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/card_week"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/white_corner">


                <TextView
                    android:id="@+id/card_seven_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/last_7_days"
                    android:textColor="@android:color/black"
                    android:textSize="30sp" />

                <LinearLayout
                    android:id="@+id/Bg_stats"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/card_seven_title"
                    android:orientation="horizontal"
                    android:weightSum="9">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:gravity="center"
                        android:text="@string/average"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:gravity="center"
                        android:text="@string/lowest"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:gravity="center"
                        android:text="@string/highest"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/Bg_seven_stats"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/Bg_stats"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal"
                    android:weightSum="9">

                    <TextView
                        android:id="@+id/tvAverage"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:gravity="center"
                        android:text="@string/_0"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvLowest"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:gravity="center"
                        android:text="@string/_0"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:gravity="center"
                        android:text="@string/_0"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/white_corner">


                <TextView
                    android:id="@+id/tvHypo2"
                    android:layout_width="92dp"
                    android:layout_height="55dp"
                    android:layout_below="@+id/bg_understand"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="21dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="18dp"
                    android:text="7.1 or above"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/card_today"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/understanding_hba1c"
                    android:textColor="@android:color/black"
                    android:textSize="30sp" />


                <LinearLayout
                    android:id="@+id/bg_understand"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/card_today"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal"
                    android:weightSum="9">

                    <TextView
                        android:id="@+id/Tvtarget"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:background="#00ff80"
                        android:gravity="center"
                        android:text="@string/target"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:background="#ffff00"
                        android:gravity="center"
                        android:text="@string/hypo"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:background="#ff4000"
                        android:gravity="center"
                        android:text="@string/hyper"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />


                </LinearLayout>

                <TextView
                    android:id="@+id/tvHypo"
                    android:layout_width="92dp"
                    android:layout_height="55dp"
                    android:layout_below="@+id/bg_understand"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="132dp"
                    android:layout_marginBottom="18dp"
                    android:text="4 or below"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />


            </RelativeLayout>

        </LinearLayout>


    </RelativeLayout>
</layout>