<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout

        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F5F5F5">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="What type of diabetes\n do you have?"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"/>

        <Button
            android:id="@+id/btn_type1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="18dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/round_border"
            android:textStyle="bold"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/type_1_diabetes"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:layout_gravity="center"
            />
        <Button
            android:id="@+id/btn_type2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="18dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/round_border"
            android:textStyle="bold"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/type_2_diabetes"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:layout_gravity="center"
            />

        <EditText
            android:id="@+id/et_other"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/round_border"
            android:textStyle="bold"
            android:fontFamily="sans-serif-condensed-light"
            android:hint="@string/if_other_please_explain_further"
            android:textColorHint="@android:color/black"
            android:textSize="18sp"
            android:layout_gravity="center" />


        <Button
            android:id="@+id/btn_continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_gravity="center"
            android:layout_marginStart="32dp"
            android:text="Go"
            android:layout_marginEnd="32dp"
            android:gravity="center"
            android:background="@drawable/round_bg"
            android:drawableEnd="@drawable/ic_baseline_navigate_next_24"
            android:drawablePadding="12dp"/>

    </LinearLayout>
    </ScrollView>
</layout>